[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-key-manager"
version = "1.0.0"
description = "Графическая утилита для управления SSH-ключами"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Vsevolod", email = "v.mikh3@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Topic :: Security :: Cryptography",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities"
]
keywords = ["ssh", "key manager", "GUI", "tkinter", "Fedora", "RPM"]
dependencies = [
  "wheel",
  "pillow",
  "setuptools"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "flake8", "mypy"]

[project.gui-scripts]
ssh-key-manager = "ssh_key_manager.main:main"

[project.urls]
repository = "https://github.com/threenet3/ssh_key_manager"
documentation = "https://github.com/threenet3/ssh_key_manager#readme"
changelog = "https://github.com/threenet3/ssh_key_manager/releases"

